# sample-bedrock-deep-researcher

./: .gitignore  README.md  beano.py  bedrock_deep_research.py  nova-researcher.py  pyproject.toml
beano/: llm.py  model.py
beano/article_writer/: __init__.py  model.py  orchestrator.py  planner_agent.py  publisher_agent.py  research_agent.py  task.py  utils.py  writer_agent.py
beano/researcher/: __init__.py  models.py  prompts.py  researcher.py  webloader.py  webloader_old.py
beano/researcher/retrievers/: __init__.py  duckduckgo.py  google.py  retrievers.py  tavily.py
bedrock_deep_research/: graph.py  model.py  tools.py  utils.py
bedrock_deep_research/nodes/: article_outline_generator.py  compile_final_article.py  human_feedback_provider.py
docs/: dependency-map.md  project-brief.md  project-structure.md  sequence-graph.md  specification.md
researcher/: callbacks.py  model.py
researcher/writer_agent/: agent.py  model.py  planner_node.py  research_node.py  researcher.py  utils.py  writer_node.py
tests/: test_model.py  test_webloader.py
